--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId> ru.ssau.tk.way.practice2</groupId>
+    <groupId>ru.ssau.tk.way.practice2</groupId>
     <artifactId>way-practice2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -12,8 +12,12 @@
         <maven.compiler.target>1.11</maven.compiler.target>
         <maven.compiler.source>1.11</maven.compiler.source>
     </properties>
-
     <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
